# eda-rebot

./: .clangd  .gitignore  AGENTS.md  审查报告v1.md
.cursor/rules/: board-facts.mdc  easyeda-schematic-read.mdc  esp32-s3-constraints.mdc  firmware-wifi.mdc  project-knowledge-updates.mdc  schematic-readonly.mdc
docs/: 12GA-N20编码器.md  DC5V白光.md  PCA9685.md  SPI显示模块转接板.md  esp32-s3.md  接线约定.txt  显示模块.md  烧录-监视.txt
docs/MS60-1211S80M/: 本板接线约定.txt
firmware/: .clangd  .gitignore  CMakeLists.txt  README.md  compile.bat  partitions.csv  platformio.ini  sdkconfig.defaults
firmware/clients/: robot_api.py
firmware/eda_robot_debug/: board_config.h  eda_robot_debug.ino  pca9685.cpp  pca9685.h  ssd1306.cpp  ssd1306.h  st7796.cpp  st7796.h  web_ui.h  xl9555.h  xpt2046.cpp
firmware/include/: board_config.h  camera_board.h  web_ui.h  xpt2046.h
firmware/main/: CMakeLists.txt  board_config.h  board_i2c.cpp  board_i2c.h  board_i2s.cpp  board_i2s.h  board_spi.cpp  board_spi.h  camera_board.cpp  camera_board.h  device_log.cpp  device_log.h  font5x7.h  idf_component.yml  main.cpp  pca9685.cpp  pca9685.h  radar_at6010.cpp  radar_at6010.h  ssd1306.cpp  ssd1306.h  st7796.cpp  st7796.h  web_radar_ui.h  web_ui.h  wifi_config.example.h  wifi_config.h  xl9555.cpp  xl9555.h  xpt2046.cpp  xpt2046.h
firmware/src/: camera_board.cpp  xl9555.cpp
